# skills

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml
.claude-plugin/: marketplace.json
agents/: code-navigator.md  code-reviewer.md  session-checkpoint.md  task-tracker.md  tasks-auditor.md
backend-core/: SKILL.md
backend-development/: SKILL.md
backend-nodejs/: SKILL.md
backend-python/: SKILL.md
backend-rust/: SKILL.md
beads/: CLAUDE.md  README.md  SKILL.md
beads-workflow/: SKILL.md
catalog/: skills.json
claude/: README.md
code-review/: SKILL.md
codex/: README.md
commands/: checkpoint.md  flow.md  init-project.md  task.md
context-engineering/: SKILL.md
daily-planner/: SKILL.md
docker/: docker-compose.yml
docs/: POLYGLOT.md  WORKFLOW.md
frontend-design/: SKILL.md
go-dev/: README.md
hooks/: README.md  enforce-semantic-tools.md  feature-dev-guard.py  flow-check.sh  hooks.json  precompact-context.sh  redis-context.sh  redis-learn.sh  session-context.sh  session-end.sh  session-persist.sh  skill-suggester.sh  suggest-semantic-tools.sh
mcp-builder/: SKILL.md
mvp-launcher/: SKILL.md
node-dev/: README.md
production-flow/: SKILL.md
python-dev/: README.md
python-testing/: SKILL.md
redis-learning/: SKILL.md
redis-memory/: SKILL.md
reliable-execution/: SKILL.md
runbooks/: README.md
rust-dev/: README.md
skills/vi-project-bootstrap/: SKILL.md  pyproject.toml
skills/vi-project-bootstrap/scripts/: skillsctl.py
skills/vi-project-bootstrap/src/vi_project_bootstrap/: skillsctl.py
(+258 files in other folders)
